--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <section class="section-content">
-      <h1 class="Slider-title">Image Slider</h1>
+      <h1 class="Slider-title">My Faourite Image Slider</h1>
       <div class="image-icon">
         <i class="fas fa-egg slide"></i>
         <i class="fas fa-bread-slice"></i>
@@ -28,6 +28,7 @@
         <i class="fas fa-ice-cream"></i>
         <i class="fas fa-pepper-hot"></i>
       </div>
+      <div><h1>My Faourite Image Slider</h1></div>
       <div>
         <h1>My favourite Image slider</h1>
       </div>
